Fixed Tooltip Overflow Bug!

--- a/thorsten.css
+++ b/thorsten.css
@@ -29,6 +29,10 @@
 	visibility: hidden;
 }
 
+/* -------- Global Site Tooltip Overflow ---- */
+#page {
+	overflow: visible;
+}
 
 
 /* =========== NODE-ENTRIES =========== */
